# reflex-platform-stack

./: LICENSE  README.md  shell.nix  stack.yaml
simpleExample/: simpleExample.cabal
simpleExample/app/: Main.hs
