name:                simpleExample
author:              Your Name
version:             0.0.0.1
build-type:          Simple
cabal-version:       >=1.10

executable simpleExample1
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , reflex
                     , reflex-dom-core
                     , jsaddle-warp
  default-language:    Haskell2010


